Fixed spacing of grid on home page.

--- a/public/a/c/_general.scss
+++ b/public/a/c/_general.scss
@@ -607,7 +607,7 @@ figure a:hover img {
 	
 	figure.grid-block{margin-bottom: 26px !important;}
 	
-	.figcaption{position: relative !important; width: 90% !important; margin: 0 auto 10px;}
+	.figcaption{position: relative !important; width: 90% !important; margin: 0 auto 0;}
 	
 	img + .caption, img + .figcaption{margin-top: 0px;}
 }
